# Mlds6_Proyecto_Aplicado

./: README.md  pyproject.toml
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: ArchivoInicialUno.xlsx  data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
scripts/charextraction/: main.py
scripts/data_acquisition/: main.py
scripts/deployment/: main.py
scripts/eda/: main.py
scripts/evaluation/: main.py
scripts/preprocessing/: main.py
scripts/training/: LSA.py  main.py
