[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lda"
version = "0.1.0"
authors = [{name = "Juan Nicolas Mendoza Roncancio", email = "jumendozar@unal.edu.co"}]
description = "En este proyecto se realiza un modelo LDA de análisis de topicos relacionados con testimonios en el marco del conflicto armado colombiano"
requires-python = ">3.8"
dependencies = [
    "numpy",
    "unidecode",
    "spacy",
    "mlflow",
    "pyngrok",
    "wordcloud
]

[tool.setuptools.packages.find]
where = ["src/"]
